manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: joinrpg-portal
  name: joinrpg-portal
  namespace: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: joinrpg-portal
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joinrpg-portal
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - joinrpg-portal
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: joinrpg-portal
        image: joinrpg-portal
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 15
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 2500m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 512Mi
