manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joinrpg-portal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - bakery-dummy.smolkov.spb.ru
      secretName: bakery-dummy-tls
  rules:
    - host: bakery-dummy.smolkov.spb.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joinrpg-portal
                port:
                  number: 80
